@@ -1,5 +1,6 @@
 Version 2.02.100 -
 ================================
+  Make "raid1" the default mirror segment type.
   Fix clogd descriptor leak when daemonizing.
   Fix clvmd descriptor leak on restart.
   Add pipe_open/close() to replace less secure popen() glibc call.
